@@ -1,6 +1,6 @@
 /*
  * SonarLint Language Server
- * Copyright (C) 2009-2021 SonarSource SA
+ * Copyright (C) 2009-2023 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -30,26 +30,48 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.function.Function;
+import javax.annotation.CheckForNull;
 import javax.annotation.Nullable;
 import org.eclipse.lsp4j.WorkspaceFolder;
 import org.eclipse.lsp4j.WorkspaceFoldersChangeEvent;
-import org.sonar.api.utils.log.Logger;
-import org.sonar.api.utils.log.Loggers;
+import org.sonarsource.sonarlint.core.commons.log.SonarLintLogger;
+import org.sonarsource.sonarlint.ls.backend.BackendServiceFacade;
+import org.sonarsource.sonarlint.ls.connected.ProjectBindingManager;
+import org.sonarsource.sonarlint.ls.connected.ProjectBindingWrapper;
+import org.sonarsource.sonarlint.ls.util.Utils;
 
 import static java.net.URI.create;
 
 public class WorkspaceFoldersManager {
 
-  private static final Logger LOG = Loggers.get(WorkspaceFoldersManager.class);
+  private static final SonarLintLogger LOG = SonarLintLogger.get();
 
   private final Map<URI, WorkspaceFolderWrapper> folders = new ConcurrentHashMap<>();
   private final List<WorkspaceFolderLifecycleListener> listeners = new ArrayList<>();
+  private ProjectBindingManager bindingManager;
+  private final BackendServiceFacade backendServiceFacade;
+  private final ExecutorService executor;
+
+  public WorkspaceFoldersManager(BackendServiceFacade backendServiceFacade) {
+    this(Executors.newCachedThreadPool(Utils.threadFactory("SonarLint folders manager", false)), backendServiceFacade);
+  }
+
+  WorkspaceFoldersManager(ExecutorService executor, BackendServiceFacade backendServiceFacade) {
+    this.executor = executor;
+    this.backendServiceFacade = backendServiceFacade;
+  }
+
+  public void setBindingManager(ProjectBindingManager bindingManager) {
+    this.bindingManager = bindingManager;
+  }
 
   public void initialize(@Nullable List<WorkspaceFolder> workspaceFolders) {
     if (workspaceFolders != null) {
       workspaceFolders.forEach(wf -> {
-        URI uri = create(wf.getUri());
+        var uri = create(wf.getUri());
         addFolder(wf, uri);
       });
     }
@@ -57,43 +79,68 @@ public class WorkspaceFoldersManager {
 
   public void didChangeWorkspaceFolders(WorkspaceFoldersChangeEvent event) {
     LOG.debug("Processing didChangeWorkspaceFolders event");
-    for (WorkspaceFolder removed : event.getRemoved()) {
-      URI uri = create(removed.getUri());
-      removeFolder(uri);
+    var removedFolderWrappers = new ArrayList<WorkspaceFolderWrapper>();
+    var addedFolderWrappers = new ArrayList<WorkspaceFolderWrapper>();
+    for (var removed : event.getRemoved()) {
+      var uri = create(removed.getUri());
+      var removedFolder = removeFolder(uri);
+      if (removedFolder != null) {
+        removedFolderWrappers.add(removedFolder);
+      }
     }
-    for (WorkspaceFolder added : event.getAdded()) {
-      URI uri = create(added.getUri());
-      WorkspaceFolderWrapper addedWrapper = addFolder(added, uri);
+    for (var added : event.getAdded()) {
+      var uri = create(added.getUri());
+      var addedWrapper = addFolder(added, uri);
+      addedFolderWrappers.add(addedWrapper);
       listeners.forEach(l -> l.added(addedWrapper));
     }
+    executor.submit(() -> {
+      backendServiceFacade.addFolders(event.getAdded(), getBindingProvider());
+      event.getRemoved().forEach(removed -> removeFolderFromBackend(removed.getUri()));
+    });
+
   }
 
-  private void removeFolder(URI uri) {
-    WorkspaceFolderWrapper removed = folders.remove(uri);
+  @CheckForNull
+  private WorkspaceFolderWrapper removeFolder(URI uri) {
+    var removed = folders.remove(uri);
     if (removed == null) {
       LOG.warn("Unregistered workspace folder was missing: " + uri);
-      return;
+      return null;
     }
     LOG.debug("Folder {} removed", removed);
     listeners.forEach(l -> l.removed(removed));
+    return removed;
   }
 
   private WorkspaceFolderWrapper addFolder(WorkspaceFolder added, URI uri) {
-    WorkspaceFolderWrapper addedWrapper = new WorkspaceFolderWrapper(uri, added);
+    var addedWrapper = new WorkspaceFolderWrapper(uri, added);
     if (folders.put(uri, addedWrapper) != null) {
       LOG.warn("Registered workspace folder {} was already added", addedWrapper);
     } else {
       LOG.debug("Folder {} added", addedWrapper);
     }
+    executor.submit(() -> {
+      var optionalProjectBindingWrapper = getBindingProvider().apply(added);
+      backendServiceFacade.addFolder(added, optionalProjectBindingWrapper);
+    });
     return addedWrapper;
   }
 
+  private Function<WorkspaceFolder, Optional<ProjectBindingWrapper>> getBindingProvider() {
+    return folder -> bindingManager.getBinding(create(folder.getUri()));
+  }
+
+  private void removeFolderFromBackend(String removedUri) {
+    backendServiceFacade.removeWorkspaceFolder(removedUri);
+  }
+
   public Optional<WorkspaceFolderWrapper> findFolderForFile(URI uri) {
-    List<URI> folderUriCandidates = folders.keySet().stream()
+    var folderUriCandidates = folders.keySet().stream()
       .filter(wfRoot -> isAncestor(wfRoot, uri))
       // Sort by path descending length to prefer the deepest one in case of multiple nested workspace folders
       .sorted(Comparator.<URI>comparingInt(wfRoot -> wfRoot.getPath().length()).reversed())
-      .collect(Collectors.toList());
+      .toList();
     if (folderUriCandidates.isEmpty()) {
       return Optional.empty();
     }
@@ -117,12 +164,12 @@ public class WorkspaceFoldersManager {
     if (folderUri.getPort() != fileUri.getPort()) {
       return false;
     }
-    if (folderUri.getScheme().equalsIgnoreCase("file")) {
+    if (Utils.uriHasFileScheme(folderUri)) {
       return Paths.get(fileUri).startsWith(Paths.get(folderUri));
     }
     // Assume "/" is the separator of "folders"
-    String[] fileSegments = fileUri.getPath().split("/");
-    String[] folderSegments = folderUri.getPath().split("/");
+    var fileSegments = fileUri.getPath().split("/");
+    var folderSegments = folderUri.getPath().split("/");
     return folderSegments.length <= fileSegments.length && Arrays.equals(folderSegments, Arrays.copyOfRange(fileSegments, 0, folderSegments.length));
   }
 
@@ -136,5 +183,9 @@ public class WorkspaceFoldersManager {
 
   public void removeListener(WorkspaceFolderLifecycleListener listener) {
     listeners.remove(listener);
+  }
+
+  public void shutdown() {
+    Utils.shutdownAndAwait(executor, true);
   }
 }
