@@ -1,6 +1,6 @@
 /*
  * SonarLint Language Server
- * Copyright (C) 2009-2021 SonarSource SA
+ * Copyright (C) 2009-2023 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -19,7 +19,12 @@
  */
 package org.sonarsource.sonarlint.ls.settings;
 
+import com.google.common.collect.Maps;
+import com.google.gson.Gson;
+import com.google.gson.JsonElement;
 import java.net.URI;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -28,52 +33,63 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
+import javax.annotation.CheckForNull;
 import javax.annotation.Nullable;
+import org.apache.commons.lang3.StringUtils;
 import org.eclipse.lsp4j.ConfigurationItem;
 import org.eclipse.lsp4j.ConfigurationParams;
-import org.eclipse.lsp4j.services.LanguageClient;
-import org.sonar.api.utils.log.Logger;
-import org.sonar.api.utils.log.Loggers;
-import org.sonarsource.sonarlint.ls.Utils;
+import org.sonarsource.sonarlint.core.clientapi.backend.rules.StandaloneRuleConfigDto;
+import org.sonarsource.sonarlint.core.commons.log.SonarLintLogger;
+import org.sonarsource.sonarlint.ls.SonarLintExtendedLanguageClient;
+import org.sonarsource.sonarlint.ls.backend.BackendServiceFacade;
 import org.sonarsource.sonarlint.ls.folders.WorkspaceFolderLifecycleListener;
 import org.sonarsource.sonarlint.ls.folders.WorkspaceFolderWrapper;
 import org.sonarsource.sonarlint.ls.folders.WorkspaceFoldersManager;
-import org.sonarsource.sonarlint.ls.http.ApacheHttpClient;
+import org.sonarsource.sonarlint.ls.util.Utils;
 
 import static java.util.Arrays.stream;
 import static org.apache.commons.lang3.StringUtils.defaultIfBlank;
 import static org.apache.commons.lang3.StringUtils.isBlank;
-import static org.sonarsource.sonarlint.ls.Utils.interrupted;
+import static org.sonarsource.sonarlint.ls.util.Utils.interrupted;
 
 public class SettingsManager implements WorkspaceFolderLifecycleListener {
 
   private static final String ORGANIZATION_KEY = "organizationKey";
   private static final String DISABLE_NOTIFICATIONS = "disableNotifications";
   private static final String PROJECT = "project";
-  private static final String DEFAULT_CONNECTION_ID = "<default>";
+  public static final String DEFAULT_CONNECTION_ID = "<default>";
   private static final String SERVER_URL = "serverUrl";
   private static final String SERVER_ID = "serverId";
   private static final String TOKEN = "token";
   private static final String CONNECTION_ID = "connectionId";
-  private static final String SONARLINT_CONFIGURATION_NAMESPACE = "sonarlint";
+  public static final String SONARLINT_CONFIGURATION_NAMESPACE = "sonarlint";
+  public static final String DOTNET_DEFAULT_SOLUTION_PATH = "dotnet.defaultSolution";
+  public static final String OMNISHARP_USE_MODERN_NET = "omnisharp.useModernNet";
+  public static final String OMNISHARP_LOAD_PROJECT_ON_DEMAND = "omnisharp.enableMsBuildLoadProjectsOnDemand";
+  public static final String OMNISHARP_PROJECT_LOAD_TIMEOUT = "omnisharp.projectLoadTimeout";
   private static final String DISABLE_TELEMETRY = "disableTelemetry";
   private static final String RULES = "rules";
   private static final String TEST_FILE_PATTERN = "testFilePattern";
-  private static final String ANALYZER_PROPERTIES = "analyzerProperties";
+  static final String ANALYZER_PROPERTIES = "analyzerProperties";
   private static final String OUTPUT = "output";
   private static final String SHOW_ANALYZER_LOGS = "showAnalyzerLogs";
   private static final String SHOW_VERBOSE_LOGS = "showVerboseLogs";
   private static final String PATH_TO_NODE_EXECUTABLE = "pathToNodeExecutable";
+  private static final String PATH_TO_COMPILE_COMMANDS = "pathToCompileCommands";
+  private static final String FOCUS_ON_NEW_CODE = "focusOnNewCode";
 
-  private static final Logger LOG = Loggers.get(SettingsManager.class);
+  private static final String WORKSPACE_FOLDER_VARIABLE = "${workspaceFolder}";
 
-  private final LanguageClient client;
+  private static final SonarLintLogger LOG = SonarLintLogger.get();
+  public static final String SONAR_CS_FILE_SUFFIXES = "sonar.cs.file.suffixes";
+
+  private final SonarLintExtendedLanguageClient client;
   private final WorkspaceFoldersManager foldersManager;
-  private final ApacheHttpClient httpClient;
 
   private WorkspaceSettings currentSettings = null;
   private final CountDownLatch initLatch = new CountDownLatch(1);
@@ -84,12 +100,19 @@ public class SettingsManager implements WorkspaceFolderLifecycleListener {
   private final ExecutorService executor;
   private final List<WorkspaceSettingsChangeListener> globalListeners = new ArrayList<>();
   private final List<WorkspaceFolderSettingsChangeListener> folderListeners = new ArrayList<>();
+  private final BackendServiceFacade backendServiceFacade;
 
-  public SettingsManager(LanguageClient client, WorkspaceFoldersManager foldersManager, ApacheHttpClient httpClient) {
+  public SettingsManager(SonarLintExtendedLanguageClient client, WorkspaceFoldersManager foldersManager,
+    BackendServiceFacade backendServiceFacade) {
+    this(client, foldersManager, Executors.newCachedThreadPool(Utils.threadFactory("SonarLint settings manager", false)), backendServiceFacade);
+  }
+
+  SettingsManager(SonarLintExtendedLanguageClient client, WorkspaceFoldersManager foldersManager,
+    ExecutorService executor, BackendServiceFacade backendServiceFacade) {
     this.client = client;
     this.foldersManager = foldersManager;
-    this.httpClient = httpClient;
-    this.executor = Executors.newCachedThreadPool(Utils.threadFactory("SonarLint settings manager", false));
+    this.executor = executor;
+    this.backendServiceFacade = backendServiceFacade;
   }
 
   /**
@@ -104,6 +127,15 @@ public class SettingsManager implements WorkspaceFolderLifecycleListener {
       interrupted(e);
     }
     throw new IllegalStateException("Unable to get settings in time");
+  }
+
+  public Map<String, StandaloneRuleConfigDto> getStandaloneRuleConfigByKey() {
+    var standaloneRuleConfigByKey = new HashMap<String, StandaloneRuleConfigDto>();
+    currentSettings.getRuleParameters().forEach(((ruleKey, paramValueByKey) -> {
+      var active = currentSettings.getIncludedRules().contains(ruleKey);
+      standaloneRuleConfigByKey.put(ruleKey.toString(), new StandaloneRuleConfigDto(active, paramValueByKey));
+    }));
+    return standaloneRuleConfigByKey;
   }
 
   /**
@@ -123,23 +155,29 @@ public class SettingsManager implements WorkspaceFolderLifecycleListener {
   public void didChangeConfiguration() {
     executor.execute(() -> {
       try {
-        Map<String, Object> workspaceSettingsMap = requestSonarLintConfigurationAsync(null).get(1, TimeUnit.MINUTES);
-        WorkspaceSettings newWorkspaceSettings = parseSettings(workspaceSettingsMap, httpClient);
-        WorkspaceSettings oldWorkspaceSettings = currentSettings;
+        var workspaceSettingsMap = requestSonarLintAndOmnisharpConfigurationAsync(null).get(1, TimeUnit.MINUTES);
+        var newWorkspaceSettings = parseSettings(workspaceSettingsMap);
+        var oldWorkspaceSettings = currentSettings;
         this.currentSettings = newWorkspaceSettings;
-        WorkspaceFolderSettings newDefaultFolderSettings = parseFolderSettings(workspaceSettingsMap);
-        WorkspaceFolderSettings oldDefaultFolderSettings = currentDefaultSettings;
+        var newDefaultFolderSettings = parseFolderSettings(workspaceSettingsMap, null);
+        var oldDefaultFolderSettings = currentDefaultSettings;
         this.currentDefaultSettings = newDefaultFolderSettings;
-        initLatch.countDown();
+        if (initLatch.getCount() != 0) {
+          initLatch.countDown();
+          backendServiceFacade.initialize(getCurrentSettings().getServerConnections());
+        } else {
+          backendServiceFacade.didChangeConnections(getCurrentSettings().getServerConnections());
+          backendServiceFacade.updateStandaloneRulesConfiguration(getStandaloneRuleConfigByKey());
+        }
 
         foldersManager.getAll().forEach(f -> updateWorkspaceFolderSettings(f, true));
-
         notifyListeners(newWorkspaceSettings, oldWorkspaceSettings, newDefaultFolderSettings, oldDefaultFolderSettings);
-
       } catch (InterruptedException e) {
         interrupted(e);
       } catch (Exception e) {
         LOG.error("Unable to update configuration", e);
+      } finally {
+        client.readyForTests();
       }
     });
   }
@@ -157,15 +195,20 @@ public class SettingsManager implements WorkspaceFolderLifecycleListener {
   }
 
   // Visible for testing
-  CompletableFuture<Map<String, Object>> requestSonarLintConfigurationAsync(@Nullable URI uri) {
-    LOG.debug("Fetching configuration for folder '{}'", uri);
-    ConfigurationParams params = new ConfigurationParams();
-    ConfigurationItem configurationItem = new ConfigurationItem();
-    configurationItem.setSection(SONARLINT_CONFIGURATION_NAMESPACE);
+  CompletableFuture<Map<String, Object>> requestSonarLintAndOmnisharpConfigurationAsync(@Nullable URI uri) {
     if (uri != null) {
-      configurationItem.setScopeUri(uri.toString());
+      LOG.debug("Fetching configuration for folder '{}'", uri);
+    } else {
+      LOG.debug("Fetching global configuration");
     }
-    params.setItems(Collections.singletonList(configurationItem));
+    var params = new ConfigurationParams();
+    var sonarLintConfigurationItem = getConfigurationItem(SONARLINT_CONFIGURATION_NAMESPACE, uri);
+    var defaultSolutionItem = getConfigurationItem(DOTNET_DEFAULT_SOLUTION_PATH, uri);
+    var modernDotnetItem = getConfigurationItem(OMNISHARP_USE_MODERN_NET, uri);
+    var loadProjectsOnDemandItem = getConfigurationItem(OMNISHARP_LOAD_PROJECT_ON_DEMAND, uri);
+    var projectLoadTimeoutItem = getConfigurationItem(OMNISHARP_PROJECT_LOAD_TIMEOUT, uri);
+
+    params.setItems(List.of(sonarLintConfigurationItem, defaultSolutionItem, modernDotnetItem, loadProjectsOnDemandItem, projectLoadTimeoutItem));
     return client.configuration(params)
       .handle((r, t) -> {
         if (t != null) {
@@ -173,14 +216,76 @@ public class SettingsManager implements WorkspaceFolderLifecycleListener {
         }
         return r;
       })
-      .thenApply(response -> response != null ? Utils.parseToMap(response.get(0)) : Collections.emptyMap());
+      .thenApply(response -> {
+        if (response != null) {
+          var settingsMap = Utils.parseToMap(response.get(0));
+          if (settingsMap != null) {
+            return updateAnalyzerProperties(uri, response, settingsMap);
+          }
+        }
+        return Collections.emptyMap();
+      });
+  }
+
+  static Map<String, Object> updateAnalyzerProperties(@org.jetbrains.annotations.Nullable URI workspaceUri, List<Object> response, Map<String, Object> settingsMap) {
+    var analyzerProperties = (Map<String, String>) settingsMap.getOrDefault(ANALYZER_PROPERTIES, Maps.newHashMap());
+    forceIgnoreRazorFiles(analyzerProperties);
+    var solutionRelativePath = tryGetSetting(response, 1, "");
+    if (!solutionRelativePath.isEmpty() && workspaceUri != null) {
+      // uri: file:///Users/me/Documents/Sonar/roslyn
+      // solutionPath: Roslyn.sln
+      // we want: /Users/me/Documents/Sonar/roslyn/Roslyn.sln
+      analyzerProperties.put("sonar.cs.internal.solutionPath", Path.of(workspaceUri).resolve(solutionRelativePath).toAbsolutePath().toString());
+    }
+    analyzerProperties.put("sonar.cs.internal.useNet6", tryGetSetting(response, 2, "true"));
+    analyzerProperties.put("sonar.cs.internal.loadProjectOnDemand", tryGetSetting(response, 3, "false"));
+    analyzerProperties.put("sonar.cs.internal.loadProjectsTimeout", tryGetSetting(response, 4, "60"));
+    settingsMap.put(ANALYZER_PROPERTIES, analyzerProperties);
+
+    return settingsMap;
+  }
+
+  private static void forceIgnoreRazorFiles(Map<String, String> analyzerProperties) {
+    if (analyzerProperties.containsKey(SONAR_CS_FILE_SUFFIXES)) {
+      var currentSetting = analyzerProperties.get(SONAR_CS_FILE_SUFFIXES);
+      if (currentSetting.contains(".razor")) {
+        var suffixes = currentSetting.split(",");
+        var newSetting = stream(suffixes)
+          .filter(suffix -> !suffix.equals(".razor"))
+          .collect(Collectors.joining(","));
+        analyzerProperties.put(SONAR_CS_FILE_SUFFIXES, newSetting);
+      }
+    } else {
+      analyzerProperties.put(SONAR_CS_FILE_SUFFIXES, ".cs");
+    }
+  }
+
+  private static String tryGetSetting(List<Object> response, int index, String defaultValue) {
+    if (response.size() > index && response.get(index) != null) {
+      try {
+        var maybeSetting = new Gson().fromJson((JsonElement) response.get(index), String.class);
+        return maybeSetting == null ? defaultValue : maybeSetting;
+      } catch (Exception e) {
+        return defaultValue;
+      }
+    }
+    return defaultValue;
+  }
+
+  private static ConfigurationItem getConfigurationItem(String section, @Nullable URI uri) {
+    var configItem = new ConfigurationItem();
+    configItem.setSection(section);
+    if (uri != null) {
+      configItem.setScopeUri(uri.toString());
+    }
+    return configItem;
   }
 
   private void updateWorkspaceFolderSettings(WorkspaceFolderWrapper f, boolean notifyOnChange) {
     try {
-      Map<String, Object> folderSettingsMap = requestSonarLintConfigurationAsync(f.getUri()).get();
-      WorkspaceFolderSettings newSettings = parseFolderSettings(folderSettingsMap);
-      WorkspaceFolderSettings old = f.getRawSettings();
+      var folderSettingsMap = requestSonarLintAndOmnisharpConfigurationAsync(f.getUri()).get();
+      var newSettings = parseFolderSettings(folderSettingsMap, f.getUri());
+      var old = f.getRawSettings();
       if (!Objects.equals(old, newSettings)) {
         f.setSettings(newSettings);
         LOG.debug("Workspace folder '{}' configuration updated: {}", f, newSettings);
@@ -195,80 +300,94 @@ public class SettingsManager implements WorkspaceFolderLifecycleListener {
     }
   }
 
-  private static WorkspaceSettings parseSettings(Map<String, Object> params, ApacheHttpClient httpClient) {
-    boolean disableTelemetry = (Boolean) params.getOrDefault(DISABLE_TELEMETRY, false);
-    String pathToNodeExecutable = (String) params.get(PATH_TO_NODE_EXECUTABLE);
-    Map<String, ServerConnectionSettings> serverConnections = parseServerConnections(params, httpClient);
+  private WorkspaceSettings parseSettings(Map<String, Object> params) {
+    var disableTelemetry = (Boolean) params.getOrDefault(DISABLE_TELEMETRY, false);
+    var pathToNodeExecutable = (String) params.get(PATH_TO_NODE_EXECUTABLE);
+    var focusOnNewCode = (Boolean) params.getOrDefault(FOCUS_ON_NEW_CODE, false);
+    var serverConnections = parseServerConnections(params);
     @SuppressWarnings("unchecked")
-    RulesConfiguration rulesConfiguration = RulesConfiguration.parse(((Map<String, Object>) params.getOrDefault(RULES, Collections.emptyMap())));
+    var rulesConfiguration = RulesConfiguration.parse(((Map<String, Object>) params.getOrDefault(RULES, Collections.emptyMap())));
     @SuppressWarnings("unchecked")
-    Map<String, Object> consoleParams = ((Map<String, Object>) params.getOrDefault(OUTPUT, Collections.emptyMap()));
-    boolean showAnalyzerLogs = (Boolean) consoleParams.getOrDefault(SHOW_ANALYZER_LOGS, false);
-    boolean showVerboseLogs = (Boolean) consoleParams.getOrDefault(SHOW_VERBOSE_LOGS, false);
+    var consoleParams = ((Map<String, Object>) params.getOrDefault(OUTPUT, Collections.emptyMap()));
+    var showAnalyzerLogs = (Boolean) consoleParams.getOrDefault(SHOW_ANALYZER_LOGS, false);
+    var showVerboseLogs = (Boolean) consoleParams.getOrDefault(SHOW_VERBOSE_LOGS, false);
     return new WorkspaceSettings(disableTelemetry, serverConnections, rulesConfiguration.excludedRules(), rulesConfiguration.includedRules(), rulesConfiguration.ruleParameters(),
-      showAnalyzerLogs, showVerboseLogs, pathToNodeExecutable);
+      showAnalyzerLogs, showVerboseLogs, pathToNodeExecutable, focusOnNewCode);
   }
 
-  private static Map<String, ServerConnectionSettings> parseServerConnections(Map<String, Object> params, ApacheHttpClient httpClient) {
+  private Map<String, ServerConnectionSettings> parseServerConnections(Map<String, Object> params) {
     @SuppressWarnings("unchecked")
-    Map<String, Object> connectedModeMap = (Map<String, Object>) params.getOrDefault("connectedMode", Collections.emptyMap());
-    Map<String, ServerConnectionSettings> serverConnections = new HashMap<>();
-    parseDeprecatedServerEntries(connectedModeMap, serverConnections, httpClient);
+    var connectedModeMap = (Map<String, Object>) params.getOrDefault("connectedMode", Collections.emptyMap());
+    var serverConnections = new HashMap<String, ServerConnectionSettings>();
+    parseDeprecatedServerEntries(connectedModeMap, serverConnections);
     @SuppressWarnings("unchecked")
-    Map<String, Object> connectionsMap = (Map<String, Object>) connectedModeMap.getOrDefault("connections", Collections.emptyMap());
-    parseSonarQubeConnections(connectionsMap, serverConnections, httpClient);
-    parseSonarCloudConnections(connectionsMap, serverConnections, httpClient);
+    var connectionsMap = (Map<String, Object>) connectedModeMap.getOrDefault("connections", Collections.emptyMap());
+    parseSonarQubeConnections(connectionsMap, serverConnections);
+    parseSonarCloudConnections(connectionsMap, serverConnections);
     return serverConnections;
   }
 
-  private static void parseDeprecatedServerEntries(Map<String, Object> connectedModeMap, Map<String, ServerConnectionSettings> serverConnections, ApacheHttpClient httpClient) {
+  private static void parseDeprecatedServerEntries(Map<String, Object> connectedModeMap, Map<String, ServerConnectionSettings> serverConnections) {
     @SuppressWarnings("unchecked")
-    List<Map<String, Object>> deprecatedServersEntries = (List<Map<String, Object>>) connectedModeMap.getOrDefault("servers", Collections.emptyList());
+    var deprecatedServersEntries = (List<Map<String, Object>>) connectedModeMap.getOrDefault("servers", Collections.emptyList());
     deprecatedServersEntries.forEach(m -> {
       if (checkRequiredAttribute(m, "server", SERVER_ID, SERVER_URL, TOKEN)) {
-        String connectionId = (String) m.get(SERVER_ID);
-        String url = (String) m.get(SERVER_URL);
-        String token = (String) m.get(TOKEN);
-        String organization = (String) m.get(ORGANIZATION_KEY);
-        ServerConnectionSettings connectionSettings = new ServerConnectionSettings(connectionId, url, token, organization, false, httpClient);
+        var connectionId = (String) m.get(SERVER_ID);
+        var url = (String) m.get(SERVER_URL);
+        var token = (String) m.get(TOKEN);
+        var organization = (String) m.get(ORGANIZATION_KEY);
+        var connectionSettings = new ServerConnectionSettings(connectionId, url, token, organization, false);
         addIfUniqueConnectionId(serverConnections, connectionId, connectionSettings);
       }
     });
   }
 
-  private static void parseSonarQubeConnections(Map<String, Object> connectionsMap, Map<String, ServerConnectionSettings> serverConnections, ApacheHttpClient httpClient) {
+  private void parseSonarQubeConnections(Map<String, Object> connectionsMap, Map<String, ServerConnectionSettings> serverConnections) {
     @SuppressWarnings("unchecked")
-    List<Map<String, Object>> sonarqubeEntries = (List<Map<String, Object>>) connectionsMap.getOrDefault("sonarqube", Collections.emptyList());
+    var sonarqubeEntries = (List<Map<String, Object>>) connectionsMap.getOrDefault("sonarqube", Collections.emptyList());
     sonarqubeEntries.forEach(m -> {
-      if (checkRequiredAttribute(m, "SonarQube server", SERVER_URL, TOKEN)) {
-        String connectionId = defaultIfBlank((String) m.get(CONNECTION_ID), DEFAULT_CONNECTION_ID);
-        String url = (String) m.get(SERVER_URL);
-        String token = (String) m.get(TOKEN);
-        boolean disableNotifications = (Boolean) m.getOrDefault(DISABLE_NOTIFICATIONS, false);
-        ServerConnectionSettings connectionSettings = new ServerConnectionSettings(connectionId, url, token, null, disableNotifications, httpClient);
+      if (checkRequiredAttribute(m, "SonarQube server", SERVER_URL)) {
+        var connectionId = defaultIfBlank((String) m.get(CONNECTION_ID), DEFAULT_CONNECTION_ID);
+        var url = (String) m.get(SERVER_URL);
+        var token = getTokenFromClient(url);
+        var disableNotifications = (Boolean) m.getOrDefault(DISABLE_NOTIFICATIONS, false);
+        var connectionSettings = new ServerConnectionSettings(connectionId, url, token, null, disableNotifications);
         addIfUniqueConnectionId(serverConnections, connectionId, connectionSettings);
       }
     });
   }
 
-  private static void parseSonarCloudConnections(Map<String, Object> connectionsMap, Map<String, ServerConnectionSettings> serverConnections, ApacheHttpClient httpClient) {
+  private void parseSonarCloudConnections(Map<String, Object> connectionsMap, Map<String, ServerConnectionSettings> serverConnections) {
     @SuppressWarnings("unchecked")
-    List<Map<String, Object>> sonarcloudEntries = (List<Map<String, Object>>) connectionsMap.getOrDefault("sonarcloud", Collections.emptyList());
+    var sonarcloudEntries = (List<Map<String, Object>>) connectionsMap.getOrDefault("sonarcloud", Collections.emptyList());
     sonarcloudEntries.forEach(m -> {
 
-      if (checkRequiredAttribute(m, "SonarCloud", ORGANIZATION_KEY, TOKEN)) {
-        String connectionId = defaultIfBlank((String) m.get(CONNECTION_ID), DEFAULT_CONNECTION_ID);
-        String organizationKey = (String) m.get(ORGANIZATION_KEY);
-        String token = (String) m.get(TOKEN);
-        boolean disableNotifs = (Boolean) m.getOrDefault(DISABLE_NOTIFICATIONS, false);
+      if (checkRequiredAttribute(m, "SonarCloud", ORGANIZATION_KEY)) {
+        var connectionId = defaultIfBlank((String) m.get(CONNECTION_ID), DEFAULT_CONNECTION_ID);
+        var organizationKey = (String) m.get(ORGANIZATION_KEY);
+        var token = getTokenFromClient(organizationKey);
+        var disableNotifs = (Boolean) m.getOrDefault(DISABLE_NOTIFICATIONS, false);
         addIfUniqueConnectionId(serverConnections, connectionId,
-          new ServerConnectionSettings(connectionId, ServerConnectionSettings.SONARCLOUD_URL, token, organizationKey, disableNotifs, httpClient));
+          new ServerConnectionSettings(connectionId, ServerConnectionSettings.SONARCLOUD_URL, token, organizationKey, disableNotifs));
       }
     });
+  }
+
+  private String getTokenFromClient(String serverUrlOrOrganization) {
+    try {
+      return client.getTokenForServer(serverUrlOrOrganization).get();
+    } catch (InterruptedException e) {
+      Thread.currentThread().interrupt();
+      LOG.error("Can't get token for server " + serverUrlOrOrganization, e);
+      return null;
+    } catch (ExecutionException e) {
+      LOG.error("Can't get token for server " + serverUrlOrOrganization, e);
+      return null;
+    }
   }
 
   private static boolean checkRequiredAttribute(Map<String, Object> map, String label, String... requiredAttributes) {
-    List<String> missing = stream(requiredAttributes).filter(att -> isBlank((String) map.get(att))).collect(Collectors.toList());
+    var missing = stream(requiredAttributes).filter(att -> isBlank((String) map.get(att))).toList();
     if (!missing.isEmpty()) {
       LOG.error("Incomplete {} connection configuration. Required parameters must not be blank: {}.", label, String.join(",", missing));
       return false;
@@ -289,16 +408,17 @@ public class SettingsManager implements WorkspaceFolderLifecycleListener {
   }
 
   // Visible for testing
-  WorkspaceFolderSettings parseFolderSettings(Map<String, Object> params) {
-    String testFilePattern = (String) params.get(TEST_FILE_PATTERN);
-    Map<String, String> analyzerProperties = getAnalyzerProperties(params);
+  WorkspaceFolderSettings parseFolderSettings(Map<String, Object> params, @Nullable URI workspaceFolderUri) {
+    var testFilePattern = (String) params.get(TEST_FILE_PATTERN);
+    var pathToCompileCommands = (String) params.get(PATH_TO_COMPILE_COMMANDS);
+    var analyzerProperties = (Map<String, String>) params.getOrDefault(ANALYZER_PROPERTIES, Map.of());
     String connectionId = null;
     String projectKey = null;
     @SuppressWarnings("unchecked")
-    Map<String, Object> connectedModeMap = (Map<String, Object>) params.getOrDefault("connectedMode", Collections.emptyMap());
+    var connectedModeMap = (Map<String, Object>) params.getOrDefault("connectedMode", Collections.emptyMap());
     if (connectedModeMap.containsKey(PROJECT)) {
       @SuppressWarnings("unchecked")
-      Map<String, String> projectBinding = (Map<String, String>) connectedModeMap.get(PROJECT);
+      var projectBinding = (Map<String, String>) connectedModeMap.get(PROJECT);
       // params.connectedMode.project is present but empty when there is no project binding
       if (!projectBinding.isEmpty()) {
         projectKey = projectBinding.get("projectKey");
@@ -318,16 +438,43 @@ public class SettingsManager implements WorkspaceFolderLifecycleListener {
         }
       }
     }
-    return new WorkspaceFolderSettings(connectionId, projectKey, analyzerProperties, testFilePattern);
+    pathToCompileCommands = substituteWorkspaceFolderVariable(workspaceFolderUri, pathToCompileCommands);
+    return new WorkspaceFolderSettings(connectionId, projectKey, analyzerProperties, testFilePattern, pathToCompileCommands);
   }
 
-  private static Map<String, String> getAnalyzerProperties(Map<String, Object> params) {
-    @SuppressWarnings("unchecked")
-    Map<String, String> map = (Map<String, String>) params.get(ANALYZER_PROPERTIES);
-    if (map == null) {
-      return Collections.emptyMap();
+  @CheckForNull
+  private static String substituteWorkspaceFolderVariable(@Nullable URI workspaceFolderUri, @Nullable String pathToCompileCommands) {
+    if (pathToCompileCommands == null) {
+      return null;
     }
-    return map;
+    if (!pathToCompileCommands.contains(WORKSPACE_FOLDER_VARIABLE)) {
+      return pathToCompileCommands;
+    }
+    if (!pathToCompileCommands.startsWith(WORKSPACE_FOLDER_VARIABLE)) {
+      LOG.error("Variable ${workspaceFolder} for sonarlint.pathToCompileCommands should be the prefix.");
+      return pathToCompileCommands;
+    }
+    if (workspaceFolderUri == null) {
+      LOG.warn("Using ${workspaceFolder} variable in sonarlint.pathToCompileCommands is only supported for files in the workspace");
+      return pathToCompileCommands;
+    }
+    if (!Utils.uriHasFileScheme(workspaceFolderUri)) {
+      LOG.error("Workspace folder is not in local filesystem, analysis not supported.");
+      return null;
+    }
+    var workspacePath = Paths.get(workspaceFolderUri);
+    var pathWithoutWorkspaceFolderPrefix = StringUtils.removeStart(pathToCompileCommands, WORKSPACE_FOLDER_VARIABLE);
+    String pathWithoutLeadingSlash = removePossibleLeadingSlash(pathWithoutWorkspaceFolderPrefix);
+    return workspacePath.resolve(pathWithoutLeadingSlash).toString();
+  }
+
+  private static String removePossibleLeadingSlash(String path) {
+    if (path.startsWith("/")) {
+      return StringUtils.removeStart(path, "/");
+    } else if (path.startsWith("\\")) {
+      return StringUtils.removeStart(path, "\\");
+    }
+    return path;
   }
 
   public void addListener(WorkspaceSettingsChangeListener listener) {
@@ -351,13 +498,11 @@ public class SettingsManager implements WorkspaceFolderLifecycleListener {
     executor.execute(() -> updateWorkspaceFolderSettings(added, false));
   }
 
-  @Override
-  public void removed(WorkspaceFolderWrapper removed) {
-    // Nothing to do
-  }
-
   public void shutdown() {
-    executor.shutdown();
+    Utils.shutdownAndAwait(executor, true);
   }
 
+  public static String connectionIdOrDefault(@Nullable String connectionId) {
+    return connectionId == null ? DEFAULT_CONNECTION_ID : connectionId;
+  }
 }
