@@ -1,6 +1,6 @@
 /*
  * SonarLint Language Server
- * Copyright (C) 2009-2021 SonarSource SA
+ * Copyright (C) 2009-2023 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -19,119 +19,57 @@
  */
 package org.sonarsource.sonarlint.ls;
 
-import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentCaptor;
-import org.sonarsource.sonarlint.core.client.api.common.Language;
-import org.sonarsource.sonarlint.core.client.api.common.ModulesProvider;
-import org.sonarsource.sonarlint.core.client.api.connected.ConnectedGlobalConfiguration;
-import org.sonarsource.sonarlint.core.client.api.connected.ConnectedSonarLintEngine;
-import org.sonarsource.sonarlint.core.client.api.standalone.StandaloneGlobalConfiguration;
-import org.sonarsource.sonarlint.core.client.api.standalone.StandaloneSonarLintEngine;
+import org.sonarsource.sonarlint.core.analysis.api.ClientModulesProvider;
+import org.sonarsource.sonarlint.core.commons.Language;
 import org.sonarsource.sonarlint.ls.log.LanguageClientLogOutput;
 
-import static java.net.URI.create;
-import static java.util.Arrays.asList;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
 
-public class EnginesFactoryTests {
-
-  private static final Path FAKE_TYPESCRIPT_PATH = Paths.get("some/path");
+class EnginesFactoryTests {
   private EnginesFactory underTest;
 
   @BeforeEach
-  public void prepare() throws Exception {
-    underTest = new EnginesFactory(asList(create("file://plugin1.jar").toURL(), create("file://plugin2.jar").toURL()), mock(LanguageClientLogOutput.class), mock(NodeJsRuntime.class), mock(ModulesProvider.class), Collections.emptyList());
+  void prepare() {
+    var standaloneAnalysers = List.of(
+      Paths.get("plugin1.jar"),
+      Paths.get("plugin2.jar"),
+      Paths.get("sonarjs.jar"),
+      Paths.get("sonarhtml.jar"),
+      Paths.get("sonarxml.jar"));
+    underTest = new EnginesFactory(standaloneAnalysers, Collections.emptyMap(), mock(LanguageClientLogOutput.class),
+      mock(NodeJsRuntime.class), mock(ClientModulesProvider.class));
     underTest = spy(underTest);
   }
 
   @Test
-  public void pass_typescript_path_to_standalone_engine() throws Exception {
-    underTest.initialize(FAKE_TYPESCRIPT_PATH);
-
-    ArgumentCaptor<StandaloneGlobalConfiguration> argCaptor = ArgumentCaptor.forClass(StandaloneGlobalConfiguration.class);
-    StandaloneSonarLintEngine mockEngine = mock(StandaloneSonarLintEngine.class);
-    doReturn(mockEngine).when(underTest).newStandaloneEngine(argCaptor.capture());
-
-    StandaloneSonarLintEngine createdEngine = underTest.createStandaloneEngine();
-
-    assertThat(createdEngine).isSameAs(mockEngine);
-    StandaloneGlobalConfiguration capturedConfig = argCaptor.getValue();
-    assertThat(capturedConfig.extraProperties()).containsEntry("sonar.typescript.internal.typescriptLocation", FAKE_TYPESCRIPT_PATH.toString());
-    assertThat(capturedConfig.getEnabledLanguages()).containsOnly(Language.HTML, Language.JAVA, Language.JS, Language.PHP, Language.PYTHON, Language.SECRETS, Language.TS);
-  }
-
-  @Test
-  public void no_typescript_to_standalone_engine() throws Exception {
-    underTest.initialize(null);
-
-    ArgumentCaptor<StandaloneGlobalConfiguration> argCaptor = ArgumentCaptor.forClass(StandaloneGlobalConfiguration.class);
-    StandaloneSonarLintEngine mockEngine = mock(StandaloneSonarLintEngine.class);
-    doReturn(mockEngine).when(underTest).newStandaloneEngine(argCaptor.capture());
-
-    StandaloneSonarLintEngine createdEngine = underTest.createStandaloneEngine();
-
-    assertThat(createdEngine).isSameAs(mockEngine);
-    StandaloneGlobalConfiguration capturedConfig = argCaptor.getValue();
-    assertThat(capturedConfig.extraProperties()).isEmpty();
-  }
-
-  @Test
-  public void pass_typescript_path_to_connected_engine() throws Exception {
-    underTest.initialize(FAKE_TYPESCRIPT_PATH);
-
-    ArgumentCaptor<ConnectedGlobalConfiguration> argCaptor = ArgumentCaptor.forClass(ConnectedGlobalConfiguration.class);
-    ConnectedSonarLintEngine mockEngine = mock(ConnectedSonarLintEngine.class);
-    doReturn(mockEngine).when(underTest).newConnectedEngine(argCaptor.capture());
-
-    ConnectedSonarLintEngine createdEngine = underTest.createConnectedEngine("foo");
-
-    assertThat(createdEngine).isSameAs(mockEngine);
-    ConnectedGlobalConfiguration capturedConfig = argCaptor.getValue();
-    assertThat(capturedConfig.extraProperties()).containsEntry("sonar.typescript.internal.typescriptLocation", FAKE_TYPESCRIPT_PATH.toString());
-    assertThat(capturedConfig.getEnabledLanguages()).containsOnly(Language.APEX, Language.HTML, Language.JAVA, Language.JS, Language.PHP, Language.PLSQL, Language.PYTHON, Language.SECRETS, Language.TS);
-  }
-
-  @Test
-  public void no_typescript_to_connected_engine() throws Exception {
-    underTest.initialize(null);
-
-    ArgumentCaptor<ConnectedGlobalConfiguration> argCaptor = ArgumentCaptor.forClass(ConnectedGlobalConfiguration.class);
-    ConnectedSonarLintEngine mockEngine = mock(ConnectedSonarLintEngine.class);
-    doReturn(mockEngine).when(underTest).newConnectedEngine(argCaptor.capture());
-
-    ConnectedSonarLintEngine createdEngine = underTest.createConnectedEngine("foo");
-
-    assertThat(createdEngine).isSameAs(mockEngine);
-    ConnectedGlobalConfiguration capturedConfig = argCaptor.getValue();
-    assertThat(capturedConfig.extraProperties()).isEmpty();
-  }
-
-  @Test
-  public void get_standalone_languages() {
+  void get_standalone_languages() {
     assertThat(EnginesFactory.getStandaloneLanguages()).containsExactlyInAnyOrder(
+      Language.C,
+      Language.CLOUDFORMATION,
+      Language.CS,
+      Language.CSS,
+      Language.CPP,
+      Language.DOCKER,
+      Language.GO,
       Language.HTML,
+      Language.IPYTHON,
       Language.JAVA,
       Language.JS,
+      Language.KUBERNETES,
       Language.PHP,
       Language.PYTHON,
       Language.SECRETS,
-      Language.TS
-    );
+      Language.TERRAFORM,
+      Language.TS,
+      Language.XML,
+      Language.YAML);
   }
 
-  @Test
-  public void resolve_extra_plugin_key() {
-    assertThat(EnginesFactory.guessPluginKey("file:///sonarsecrets.jar")).isEqualTo(Language.SECRETS.getPluginKey());
-    assertThatThrownBy(() -> EnginesFactory.guessPluginKey("file:///unknown.jar"))
-      .isInstanceOf(IllegalStateException.class)
-      .hasMessageContaining("Unknown analyzer.");
-  }
 }
