@@ -1,6 +1,6 @@
 /*
  * SonarLint Language Server
- * Copyright (C) 2009-2021 SonarSource SA
+ * Copyright (C) 2009-2023 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -19,35 +19,35 @@
  */
 package org.sonarsource.sonarlint.ls.settings;
 
-import com.google.common.collect.ImmutableMap;
+import java.util.List;
+import java.util.Map;
 import org.junit.jupiter.api.Test;
-import org.sonarsource.sonarlint.core.client.api.common.RuleKey;
-import org.sonarsource.sonarlint.ls.http.ApacheHttpClient;
+import org.sonarsource.sonarlint.core.commons.RuleKey;
+import org.sonarsource.sonarlint.ls.backend.BackendServiceFacade;
 
-import static java.util.Collections.singletonList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
 
 class WorkspaceSettingsTests {
 
-  private static final ApacheHttpClient httpClient = mock(ApacheHttpClient.class);
+  private static final BackendServiceFacade backendServiceFacade = mock(BackendServiceFacade.class);
   public static final RuleKey RULE_KEY_1 = new RuleKey("repo1", "rule1");
   public static final RuleKey RULE_KEY_2 = new RuleKey("repo2", "rule2");
   private static final WorkspaceSettings SETTINGS = new WorkspaceSettings(false,
-    ImmutableMap.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true, httpClient)),
-    singletonList(RULE_KEY_1),
-    singletonList(RULE_KEY_2),
-    ImmutableMap.of(RULE_KEY_2, ImmutableMap.of("param1", "value1")),
-    false, false, "path/to/node");
+    Map.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true)),
+    List.of(RULE_KEY_1),
+    List.of(RULE_KEY_2),
+    Map.of(RULE_KEY_2, Map.of("param1", "value1")),
+    false, false, "path/to/node", false);
 
   @Test
   void testHashCode() {
     assertThat(new WorkspaceSettings(false,
-      ImmutableMap.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true, httpClient)),
-      singletonList(RULE_KEY_1),
-      singletonList(RULE_KEY_2),
-      ImmutableMap.of(RULE_KEY_2, ImmutableMap.of("param1", "value1")),
-      false, false, "path/to/node")).hasSameHashCodeAs(SETTINGS);
+      Map.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true)),
+      List.of(RULE_KEY_1),
+      List.of(RULE_KEY_2),
+      Map.of(RULE_KEY_2, Map.of("param1", "value1")),
+      false, false, "path/to/node", false)).hasSameHashCodeAs(SETTINGS);
   }
 
   @Test
@@ -57,72 +57,77 @@ class WorkspaceSettingsTests {
       .isNotEqualTo(null)
       .isNotEqualTo("foo")
       .isEqualTo(new WorkspaceSettings(false,
-        ImmutableMap.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true, httpClient)),
-        singletonList(new RuleKey("repo1", "rule1")),
-        singletonList(new RuleKey("repo2", "rule2")),
-        ImmutableMap.of(RULE_KEY_2, ImmutableMap.of("param1", "value1")), false, false, "path/to/node"))
+        Map.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true)),
+        List.of(new RuleKey("repo1", "rule1")),
+        List.of(new RuleKey("repo2", "rule2")),
+        Map.of(RULE_KEY_2, Map.of("param1", "value1")), false, false, "path/to/node", false))
       .isNotEqualTo(new WorkspaceSettings(true,
-        ImmutableMap.of("serverId2", new ServerConnectionSettings("serverId2", "serverUrl", "token", "myOrg", true, httpClient)),
-        singletonList(new RuleKey("repo1", "rule1")),
-        singletonList(new RuleKey("repo2", "rule2")),
-        ImmutableMap.of(RULE_KEY_2, ImmutableMap.of("param1", "value1")), false, false, "path/to/node"))
+        Map.of("serverId2", new ServerConnectionSettings("serverId2", "serverUrl", "token", "myOrg", true)),
+        List.of(new RuleKey("repo1", "rule1")),
+        List.of(new RuleKey("repo2", "rule2")),
+        Map.of(RULE_KEY_2, Map.of("param1", "value1")), false, false, "path/to/node", false))
       .isNotEqualTo(new WorkspaceSettings(false,
-        ImmutableMap.of("serverId", new ServerConnectionSettings("serverId", "serverUrl2", "token", "myOrg", true, httpClient)),
-        singletonList(new RuleKey("repo1", "rule1")),
-        singletonList(new RuleKey("repo2", "rule2")),
-        ImmutableMap.of(RULE_KEY_2, ImmutableMap.of("param1", "value1")), false, false, "path/to/node"))
+        Map.of("serverId", new ServerConnectionSettings("serverId", "serverUrl2", "token", "myOrg", true)),
+        List.of(new RuleKey("repo1", "rule1")),
+        List.of(new RuleKey("repo2", "rule2")),
+        Map.of(RULE_KEY_2, Map.of("param1", "value1")), false, false, "path/to/node", false))
       .isNotEqualTo(new WorkspaceSettings(false,
-        ImmutableMap.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token2", "myOrg", true, httpClient)),
-        singletonList(new RuleKey("repo1", "rule1")),
-        singletonList(new RuleKey("repo2", "rule2")),
-        ImmutableMap.of(RULE_KEY_2, ImmutableMap.of("param1", "value1")), false, false, "path/to/node"))
+        Map.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token2", "myOrg", true)),
+        List.of(new RuleKey("repo1", "rule1")),
+        List.of(new RuleKey("repo2", "rule2")),
+        Map.of(RULE_KEY_2, Map.of("param1", "value1")), false, false, "path/to/node", false))
       .isNotEqualTo(new WorkspaceSettings(false,
-        ImmutableMap.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg2", true, httpClient)),
-        singletonList(new RuleKey("repo1", "rule1")),
-        singletonList(new RuleKey("repo2", "rule2")),
-        ImmutableMap.of(RULE_KEY_2, ImmutableMap.of("param1", "value1")), false, false, "path/to/node"))
+        Map.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg2", true)),
+        List.of(new RuleKey("repo1", "rule1")),
+        List.of(new RuleKey("repo2", "rule2")),
+        Map.of(RULE_KEY_2, Map.of("param1", "value1")), false, false, "path/to/node", false))
       .isNotEqualTo(new WorkspaceSettings(false,
-        ImmutableMap.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true, httpClient)),
-        singletonList(new RuleKey("repo1", "rule12")),
-        singletonList(new RuleKey("repo2", "rule2")),
-        ImmutableMap.of(RULE_KEY_2, ImmutableMap.of("param1", "value1")), false, false, "path/to/node"))
+        Map.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true)),
+        List.of(new RuleKey("repo1", "rule12")),
+        List.of(new RuleKey("repo2", "rule2")),
+        Map.of(RULE_KEY_2, Map.of("param1", "value1")), false, false, "path/to/node", false))
       .isNotEqualTo(new WorkspaceSettings(false,
-        ImmutableMap.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true, httpClient)),
-        singletonList(new RuleKey("repo1", "rule1")),
-        singletonList(new RuleKey("repo2", "rule22")),
-        ImmutableMap.of(RULE_KEY_2, ImmutableMap.of("param1", "value1")), false, false, "path/to/node"))
+        Map.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true)),
+        List.of(new RuleKey("repo1", "rule1")),
+        List.of(new RuleKey("repo2", "rule22")),
+        Map.of(RULE_KEY_2, Map.of("param1", "value1")), false, false, "path/to/node", false))
       .isNotEqualTo(new WorkspaceSettings(false,
-        ImmutableMap.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true, httpClient)),
-        singletonList(new RuleKey("repo1", "rule1")),
-        singletonList(new RuleKey("repo2", "rule22")),
-        ImmutableMap.of(RULE_KEY_2, ImmutableMap.of("param1", "value1")), false, false, "path/to/node"))
+        Map.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true)),
+        List.of(new RuleKey("repo1", "rule1")),
+        List.of(new RuleKey("repo2", "rule22")),
+        Map.of(RULE_KEY_2, Map.of("param1", "value1")), false, false, "path/to/node", false))
       .isNotEqualTo(new WorkspaceSettings(false,
-        ImmutableMap.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true, httpClient)),
-        singletonList(RULE_KEY_1),
-        singletonList(RULE_KEY_2),
-        ImmutableMap.of(RULE_KEY_2, ImmutableMap.of("param1", "value2")), false, false, "path/to/node"))
+        Map.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true)),
+        List.of(RULE_KEY_1),
+        List.of(RULE_KEY_2),
+        Map.of(RULE_KEY_2, Map.of("param1", "value2")), false, false, "path/to/node", false))
       .isNotEqualTo(new WorkspaceSettings(false,
-        ImmutableMap.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true, httpClient)),
-        singletonList(new RuleKey("repo1", "rule1")),
-        singletonList(new RuleKey("repo2", "rule2")),
-        ImmutableMap.of(RULE_KEY_2, ImmutableMap.of("param1", "value1")), true, false, "path/to/node"))
+        Map.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true)),
+        List.of(new RuleKey("repo1", "rule1")),
+        List.of(new RuleKey("repo2", "rule2")),
+        Map.of(RULE_KEY_2, Map.of("param1", "value1")), true, false, "path/to/node", false))
       .isNotEqualTo(new WorkspaceSettings(false,
-        ImmutableMap.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true, httpClient)),
-        singletonList(new RuleKey("repo1", "rule1")),
-        singletonList(new RuleKey("repo2", "rule2")),
-        ImmutableMap.of(RULE_KEY_2, ImmutableMap.of("param1", "value1")), false, true, "path/to/node"))
+        Map.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true)),
+        List.of(new RuleKey("repo1", "rule1")),
+        List.of(new RuleKey("repo2", "rule2")),
+        Map.of(RULE_KEY_2, Map.of("param1", "value1")), false, true, "path/to/node", false))
       .isNotEqualTo(new WorkspaceSettings(false,
-        ImmutableMap.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true, httpClient)),
-        singletonList(RULE_KEY_1),
-        singletonList(RULE_KEY_2),
-        ImmutableMap.of(RULE_KEY_2, ImmutableMap.of("param1", "value1")),
-        false, false, "other/path/to/node"));
+        Map.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true)),
+        List.of(RULE_KEY_1),
+        List.of(RULE_KEY_2),
+        Map.of(RULE_KEY_2, Map.of("param1", "value1")),
+        false, false, "other/path/to/node", false))
+      .isNotEqualTo(new WorkspaceSettings(false,
+        Map.of("serverId", new ServerConnectionSettings("serverId", "serverUrl", "token", "myOrg", true)),
+        List.of(new RuleKey("repo1", "rule1")),
+        List.of(new RuleKey("repo2", "rule2")),
+        Map.of(RULE_KEY_2, Map.of("param1", "value1")), false, false, "path/to/node", true));
   }
 
   @Test
   void testToString() {
     assertThat(SETTINGS).hasToString(
-      "WorkspaceSettings[connections={serverId=ServerConnectionSettings[connectionId=serverId,disableNotifications=true,organizationKey=myOrg,serverUrl=serverUrl,token=token]},disableTelemetry=false,excludedRules=[repo1:rule1],includedRules=[repo2:rule2],pathToNodeExecutable=path/to/node,ruleParameters={repo2:rule2={param1=value1}},showAnalyzerLogs=false,showVerboseLogs=false]");
+      "WorkspaceSettings[connections={serverId=ServerConnectionSettings[connectionId=serverId,disableNotifications=true,organizationKey=myOrg,serverUrl=serverUrl,token=token]},disableTelemetry=false,excludedRules=[repo1:rule1],focusOnNewCode=false,includedRules=[repo2:rule2],pathToNodeExecutable=path/to/node,ruleParameters={repo2:rule2={param1=value1}},showAnalyzerLogs=false,showVerboseLogs=false]");
   }
 
 }
